/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Amos Luo
 */

package ucf.assignments;

public class TodoList {
    String titlename;

    public void saveList(String titlename){
        //New FileWriter = "ListTitle"
        //Save all the data for one list into file
        //Save file into "user inputted filepath"
    }

    public void removeList(String titlename){
        //Using mouseevent, grab the path of file
        //Remove the file with function (Maybe premade?)
    }

    public void loadList(String titlename){
        //Using mouseevent, grab path name
        //Open the file by loading it
    }
}
